fix - overflow of news

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,14 +17,18 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  background: radial-gradient(ellipse at bottom left,
+      #034a2f,
+      #05100c,
+      #05100c);
 }
 
 button {
   appearance: none;
   padding: 0.5rem 1.5rem;
   border-radius: 0.5rem;
-  border: 0 solid blue;
-  outline: solid 0 blue;
+  border-width: 0;
+  outline-width: 0;
   background-color: #00FF9C;
 }
 
@@ -82,6 +86,12 @@ article {
   gap: 1rem;
   width: 100%;
   padding-top: 1rem;
+}
+
+.news {
+  flex-grow: 1;
+  overflow: auto;
+  max-height: 62vh;
 }
 
 article h2,
